--- a/base_templates/global/base_funcionario.html
+++ b/base_templates/global/base_funcionario.html
@@ -18,8 +18,8 @@
         <a href="{% url "sistema:cadastrar_livro" %}">cadastrar Livro</a>
         <a href={% url "sistema:livros_emprestar" %}>Emprétimo</a>
         <a href={% url "sistema:livros_excluir" %}>Remover Livro</a>
-        <a href="">Remover Usuário</a>
-        <a href="">Logout</a>
+        <a href="{% url "sistema:exclui_usuario" %}">Remover Usuário</a>
+        <a href="{% url "sistema:logout_funcionario" %}">Logout</a>
         {% endblock menu %}
         {% block busca %}{% endblock busca %}
     </nav>
