--- a/base_templates/global/base_funcionario.html
+++ b/base_templates/global/base_funcionario.html
@@ -5,9 +5,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>{{title}}</title>
     <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-    <link rel="stylesheet" href="{% static " global/base.css" %}">
+    <link rel="stylesheet" href="{% static "global/base.css" %}">
 </head>
 
 <header>
