--- a/base_templates/global/base_funcionario.html
+++ b/base_templates/global/base_funcionario.html
@@ -2,33 +2,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{title}}</title>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.min.css">
-    <link rel="stylesheet" href="{% static "global/base.css" %}">
-</head>
-
-<header>
-    <h1>Sistema Bibliotecário</h1>
-    <nav>
-        {% block menu %}
-        <a href="{% url "sistema:cadastrar_usuario" %}">cadastrar Usuário</a>
-        <a href="{% url "sistema:cadastrar_livro" %}">cadastrar Livro</a>
-        <a href={% url "sistema:livros_emprestar" %}>Emprétimo</a>
-        <a href={% url "sistema:livros_excluir" %}>Remover Livro</a>
-        <a href="{% url "sistema:ver_usuarios" %}">Remover Usuário</a>
-        <a href="{% url "sistema:logout_funcionario" %}">Logout</a>
-        {% endblock menu %}
-        {% block busca %}{% endblock busca %}
-    </nav>
-</header>
+{% include 'global/partials/_head.html' %}
 
 <body>
+
+    <header>
+        <h1>Sistema Bibliotecário</h1>
+        <nav>
+            {% block menu %}
+            <a href="{% url 'sistema:cadastrar_usuario' %}">cadastrar Usuário</a>
+            <a href="{% url 'sistema:cadastrar_livro' %}">cadastrar Livro</a>
+            <a href="{% url 'sistema:livros_emprestar' %}">Emprétimo</a>
+            <a href="{% url 'sistema:livros_excluir' %}">Remover Livro</a>
+            <a href="{% url 'sistema:ver_usuarios' %}">Remover Usuário</a>
+            <a href="{% url 'sistema:logout_funcionario' %}">Logout</a>
+            {% endblock menu %}
+
+            {% block busca %}{% endblock busca %}
+        </nav>
+    </header>
+
     <main>
         {% block content %}{% endblock content %}
+        {% include "global/partials/_pagination.html" %}
     </main>
+
+    <footer>
+        {% include "global/partials/_footer.html" %}
+    </footer>
 
 </body>
 
