mudando para class views e modificações

--- a/base_templates/global/base_emprestimo.html
+++ b/base_templates/global/base_emprestimo.html
@@ -20,6 +20,7 @@
     </header>
 
     <main>
+        {% include "global/partials/_messages.html" %}
         {% block content %}{% endblock content %}
         {% include "global/partials/_pagination.html" %}
     </main>
