--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -18,6 +18,7 @@
 <body>
 
     <main>
+        {% include "global/partials/_messages.html" %}
         {% block content %}{% endblock content %}
         {% include "global/partials/_pagination.html" %}
     </main>
