--- a/base_templates/global/base_gerente.html
+++ b/base_templates/global/base_gerente.html
@@ -17,8 +17,8 @@
     </header>
 
     <main>
+        {% include "global/partials/_messages.html" %}
         {% block content %}{% endblock content %}
-
         {% include "global/partials/_pagination.html" %}
     </main>
 
