add buscas e modificações

--- a/base_templates/global/base_gerente.html
+++ b/base_templates/global/base_gerente.html
@@ -13,6 +13,7 @@
             <a href="{% url 'sistema:funcionarios' %}">Funcionários</a>
             <a href="{% url 'sistema:logout_gerente' %}">Logout</a>
             {% endblock menu %}
+            {% block busca %}{% endblock busca %}
         </nav>
     </header>
 
