atualizando os templates

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -4,18 +4,18 @@
 
 {% include 'global/partials/_head.html' %}
 
-<header>
-    <h1>Sistema Bibliotecário</h1>
-    <nav>
-        {% block menu %}
-        <a href="{% url 'sistema:login_funcionario' %}">Login Funcionário</a>
-        <a href="{% url 'sistema:login_gerente' %}">Login Gerente</a>
-        <a href="{% url 'sistema:cadastrar_funcionario' %}">Cadastrar Funcionário</a>
-        {% endblock menu %}
-    </nav>
-</header>
-
 <body>
+    <header>
+        <h1>Sistema Bibliotecário</h1>
+        <nav>
+            {% block menu %}
+                {% include "global/partials/_menu_link.html" %}
+            {% endblock menu %}
+            {% block busca %}
+                {% include "global/partials/_search.html" %}
+            {% endblock busca %}
+        </nav>
+    </header>
 
     <main>
         {% include "global/partials/_messages.html" %}
